--- a/adminRegistration.html
+++ b/adminRegistration.html
@@ -16,7 +16,7 @@
                     <input type="text" class="form-control" id="name" required>
                 </div>
                 <div class="mb-3">
-                    <label for="nuvID" class="form-label">NUV Mail ID</label>
+                    <label for="nuvID" class="form-label">Mail ID</label>
                     <input type="mail" class="form-control" id="nuvID" required>
                 </div>
                 <div class="mb-3">
