--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h3 class="text-center mb-3">Admin Login</h3>
             <form id="loginForm">
                 <div class="mb-3">
-                    <label for="email" class="form-label">NUV maid ID</label>
+                    <label for="email" class="form-label">User ID</label>
                     <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
                 </div>
                 <div class="mb-3">
@@ -23,7 +23,7 @@
             </form>
             <div class="text-center mt-3">
                 <p>Not registered? <a href="adminRegistration.html">Register here</a></p>
-                <p>Reset password? <a href="resetPassword.html">Register here</a></p>
+                <p>Reset password? <a href="resetPassword.html">Click here</a></p>
             </div>
         </div>
     </div>
