--- a/adminRegistration.html
+++ b/adminRegistration.html
@@ -10,7 +10,7 @@
     <div class="container d-flex justify-content-center align-items-center vh-70 mt-5">
         <div class="card shadow p-4" style="width: 500px;">
             <h3 class="text-center mb-3">Admin Registration</h3>
-            <form id="registerForm">
+            <form id="registerForm" method="post">
                 <div class="mb-3">
                     <label for="name" class="form-label">Full Name</label>
                     <input type="text" class="form-control" id="name" required>
