--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="card shadow p-4" style="width: 350px;">
             <h3 class="text-center mb-3">Admin Login</h3>
-            <form id="loginForm">
+            <form id="loginForm"method="post">
                 <div class="mb-3">
                     <label for="email" class="form-label">User ID</label>
                     <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
@@ -28,6 +28,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module"scr="js/adminValidation.js"></script>
+    <script type="module"src="js/adminLogin.js"></script>
 </body>
 </html>
