--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </form>
             <div class="text-center mt-3">
                 <p>Not registered? <a href="adminRegistration.html">Register here</a></p>
-                <p>Reset password? <a href="resetPassword.html">Click here</a></p>
+<!--                 <p>Reset password? <a href="resetPassword.html">Click here</a></p> -->
             </div>
         </div>
     </div>
