--- a/manageTest.html
+++ b/manageTest.html
@@ -74,8 +74,8 @@
 
     <!-- Right Side (Exam Options) -->
     <div class="content">
-        <h4 id="examTitle">Select an Exam</h4>
-        <p id="examDuration" style="display: none;"><strong>Duration:</strong> <span id="durationValue"></span> minutes"></p>
+         <h4 id="examTitle">Select an Exam</h4>
+        <p id="examDuration"></p>
 
         <div id="examOptions" style="display: none;">
             <div>   
