--- a/createTest.html
+++ b/createTest.html
@@ -72,6 +72,7 @@
                 <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link active" href="createTest.html">Create Test</a></li>
                 <li class="nav-item"><a class="nav-link" href="manageTest.html">Manage Tests</a></li>
+                <li class="nav-item"><a class="nav-link" href="logout.html">Log Out</a></li>
             </ul>
         </div>
     </div>
