--- a/dashboard.html
+++ b/dashboard.html
@@ -22,6 +22,7 @@
                     <li class="nav-item"><a class="nav-link active" href="dashboard.html">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link " href="createTest.html">Create Test</a></li>
                     <li class="nav-item"><a class="nav-link" href="manageTest.html">Manage Tests</a></li>
+                    <li class="nav-item"><a class="nav-link" href="logout.html">Log Out</a></li>
                 </ul>
             </ul>
         </div>
