--- a/manageTest.html
+++ b/manageTest.html
@@ -53,6 +53,7 @@
                 <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="createTest.html">Create Test</a></li>
                 <li class="nav-item"><a class="nav-link active" href="manageTest.html">Manage Tests</a></li>
+                <li class="nav-item"><a class="nav-link" href="logout.html">Log Out</a></li>
             </ul>
         </div>
     </div>
