--- a/manageTest.html
+++ b/manageTest.html
@@ -82,8 +82,8 @@
             <div>   
             <button class="btn btn-primary" onclick="showUpdateFormQuestions()">Update Questions</button>
             <button class="btn btn-warning" onclick="showUpdateFormStudents()">Update Student List</button>
-            <button class="btn btn-info" onclick="updateTestTitle()">Update Test Title</button>
-<!--             <button class="btn btn-secondary" onclick="updateTestDuration()">Update Test Duration</button> --> 
+<!--             <button class="btn btn-info" onclick="updateTestTitle()">Update Test Title</button> -->
+            <button class="btn btn-secondary" onclick="updateTestDuration()">Update Test Duration</button> 
             <button class="btn btn-light text-danger border border-danger" onclick="deleteResponses()">Delete Responses</button>
     </div>
     <button class="btn btn-danger mt-5 px-4" onclick="deleteTest()">Delete Test</button>
