--- a/adminRegistration.html
+++ b/adminRegistration.html
@@ -36,6 +36,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js""></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/js/adminRegistration.js"></script>
 </body>
