--- a/adminRegistration.html
+++ b/adminRegistration.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <style>.fcontent{
+    font-size: 14px;
+  } 
+    @media (max-width: 992px) {
+    .fcontent{
+        font-size: 9px;
+    }</style>
 </head>
 <body class="bg-light">
     <div class="container d-flex justify-content-center align-items-center vh-70 mt-5">
