--- a/createTest.html
+++ b/createTest.html
@@ -8,6 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
+    .fcontent{
+    font-size: 14px;
+  } 
+    @media (max-width: 992px) {
+    .fcontent{
+        font-size: 9px;
+    }
         .form-container {
             width: 100%;
             max-width: 60%;
