--- a/manageTest.html
+++ b/manageTest.html
@@ -37,6 +37,13 @@
             background: #f9f9f9;
             display: none;
         }
+         .fcontent{
+    font-size: 14px;
+  } 
+    @media (max-width: 992px) {
+    .fcontent{
+        font-size: 9px;
+    }
     </style>
 </head>
 <body>
