--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,13 @@
     <title>Admin Dashboard - Exam Portal</title>
      <style>
         #testList button,#testList a{ margin-bottom: 10px;margin-left:20px}
+         .fcontent{
+    font-size: 14px;
+  } 
+    @media (max-width: 992px) {
+    .fcontent{
+        font-size: 9px;
+    }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
