--- a/adminRegistration.html
+++ b/adminRegistration.html
@@ -11,7 +11,7 @@
     @media (max-width: 992px) {
     .fcontent{
         font-size: 9px;
-    }</style>
+    }}</style>
 </head>
 <body class="bg-light">
     <div class="container d-flex justify-content-center align-items-center vh-70 mt-5">
