--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     @media (max-width: 992px) {
     .fcontent{
         font-size: 9px;
-    }</style>
+    }}</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
