--- a/createTest.html
+++ b/createTest.html
@@ -145,7 +145,7 @@
 <footer style="background: linear-gradient(180deg, rgb(240, 247, 255) 0%, rgb(255, 255, 255) 100%); color: #333; margin-top: 200px; padding: 4px 0;">
     <div style="display: flex; justify-content: space-between; align-items: center;margin-top:50px;padding-top:50px; padding: 0 20px;">
         <p class="fcontent">© 2025 NUV Group, All rights reserved.</p>
-        <p class="fcontent"style="text-align: right;">Designed & Developed By Vaibhavi Patel</p>
+        <p class="fcontent"style="text-align: right;">Designed & Developed By Prof. Vaibhavi Patel</p>
     </div>
 </footer>
 </body>
